<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">byue301NotePrime</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_name_home">Home</string>
    <string name="activity_name_new">New Note</string>
    <string name="activity_name_info">Information</string>
    <string name="activity_name_archive">Archive</string>
    <string name="quick_note_hint">Write a quick note&#8230;</string>
    <string name="new_note_title_hint">Title</string>
    <string name="new_note_detail_hint">Some more details&#8230;</string>
    <string name="new_note_date_hint">Due date</string>
    <string name="new_note_time_hint">Due time</string>
    <string name="header_new_note_title">TITLE</string>
    <string name="header_new_note_details">DETAILS</string>
    <string name="header_new_note_due">DUE DATE</string>
    <string name="accessibility_accept_button">Accept</string>
    <string name="accessibility_overflow_button">More</string>
    <string name="accessability_clear_button">Clear</string>
    <string name="action_new">New note</string>
    <string name="action_archive">Archive</string>
    <string name="action_send_all">Send everything</string>
    <string name="action_info">Information</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_select_all">Select All</string>
    <string name="action_mail">email Notes</string>
    <string name="action_upload">Unarchive</string>
    <string name="list_item_title">Title</string>
    <string name="list_item_detail">Details&#8230;</string>
    <string name="list_item_due">Due: MMMM DD, hh:mm a</string>
    <string name="button_accept">Done</string>
    <string name="button_cancel">Cancel</string>
    <string name="info_heading1">byue301NotePrime</string>
    <string name="info_body1">This is my result for the first project in CMPUT 301. I hope you like it!</string>
    <string name="license_heading">Licence</string>
    <string name="licence_body">\tCopyright 2014 Brandon Yue\n
\n
Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n
\n
http://www.apache.org/licenses/LICENSE-2.0\n
\n
Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n
\n
This project makes use of the DateTimePicker library and the NineOldAndroids library, which are also licenced under the Apache License, Version 2.0.\n
DateTimePicker Copyright 2013 Flavien Laurent (DatePicker) edisonw (TimePicker).\n
NineOldAndroids Copyright 2012 Jake Wharton.</string>

</resources>
