<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_unarchive_selected"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_upload"
        android:icon="@drawable/ic_action_upload" />
    
    <item
        android:id="@+id/action_edit_selection"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit" />
    
	<item	
        android:id="@+id/action_select_all"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_action_select_all" />
    
    <item
        android:id="@+id/action_delete_selected"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_discard" />
    
    <item
        android:id="@+id/action_mail_selection"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_mail"
        android:icon="@drawable/ic_action_email" />
    
</menu>
