<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_new"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_new"
        android:icon="@drawable/ic_action_new"/>
    
    <item 
        android:id="@+id/action_archive"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/action_archive"
        android:icon="@drawable/ic_action_archive"/>
        
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"/>

</menu>
